[package]
name = "must"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interprocess = "2.1.0"
symphonia = { version = "0.5.4", features = ["all", "opt-simd"] }
log = "0.4.21"
libpulse-binding = "2.28.1"
libpulse-simple-binding = "2.28.1"
pretty_env_logger = "0.5.0"
clap = "4.5.4"
